[gd_scene load_steps=26 format=2]

[ext_resource path="res://tilemaps/World-TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://tilemaps/One-Way Blocks.tres" type="TileSet" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://tilemaps/ladder.tres" type="TileSet" id=4]
[ext_resource path="res://assets/HUD/Coin_0.png" type="Texture" id=5]
[ext_resource path="res://Coin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/hearts/hud_heartFull.png" type="Texture" id=8]
[ext_resource path="res://assets/hearts/hud_heartEmpty.png" type="Texture" id=9]
[ext_resource path="res://HUD.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/Pixel-Font.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://Level 1.gd" type="Script" id=12]
[ext_resource path="res://falldown_zone_checker_level2.gd" type="Script" id=13]
[ext_resource path="res://Med-Pack.tscn" type="PackedScene" id=14]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=15]
[ext_resource path="res://Pause-Menu.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/background/set2_background.png" type="Texture" id=17]
[ext_resource path="res://MobileControls.tscn" type="PackedScene" id=18]
[ext_resource path="res://Game-Music.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2346.5, 37 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 896 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 192 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.317647 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=5]
size = 27
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 11 )

[node name="Level 2" type="Node2D"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2283, -937 )
scale = Vector2( 8.32031, 8.37083 )
texture = ExtResource( 17 )

[node name="Fallzone" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 2368, 800 )
shape = SubResource( 8 )

[node name="Blocks" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
collision_layer = 8
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1376208, 9, 0, -1376207, 2, 0, -1376206, 2, 0, -1376205, 2, 0, -1376203, 2, 0, -1376202, 2, 0, -1376201, 2, 0, -1376200, 2, 0, -1376199, 2, 0, -1376198, 2, 0, -1376197, 2, 0, -1376196, 10, 0, -1245146, 9, 0, -1245145, 2, 0, -1245144, 2, 0, -1245143, 2, 0, -1245142, 2, 0, -1245141, 10, 0, -1179634, 9, 0, -1179633, 2, 0, -1179632, 2, 0, -1179631, 2, 0, -1179630, 2, 0, -1179629, 2, 0, -1179628, 2, 0, -1179627, 2, 0, -1179626, 2, 0, -1179625, 2, 0, -1179624, 2, 0, -1179623, 2, 0, -1179622, 2, 0, -1179621, 2, 0, -1179620, 2, 0, -1179619, 2, 0, -1179618, 10, 0, -1048543, 9, 0, -1048542, 10, 0, -1048532, 9, 0, -1048531, 2, 0, -1048530, 2, 0, -1048529, 2, 0, -1048528, 2, 0, -1048527, 10, 0, -917497, 9, 0, -917496, 2, 0, -917495, 2, 0, -917494, 2, 0, -917493, 2, 0, -917492, 2, 0, -917491, 10, 0, -851949, 9, 0, -851948, 2, 0, -851947, 2, 0, -851946, 2, 0, -851945, 2, 0, -851944, 2, 0, -851943, 2, 0, -851942, 10, 0, -851939, 9, 0, -851938, 2, 0, -851937, 10, 0, -851932, 9, 0, -851931, 2, 0, -851930, 2, 0, -851929, 10, 0, -720849, 1, 0, -720848, 19, 0, -720843, 1, 0, -720842, 2, 0, -720841, 2, 0, -720840, 2, 0, -720839, 2, 0, -720838, 2, 0, -720837, 2, 0, -720836, 3, 0, -655313, 0, 0, -655307, 0, 0, -589777, 0, 0, -589771, 0, 0, -524287, 9, 0, -524286, 2, 0, -524285, 2, 0, -524284, 2, 0, -524283, 2, 0, -524282, 2, 0, -524281, 2, 0, -524280, 2, 0, -524279, 10, 0, -524261, 9, 0, -524260, 2, 0, -524259, 2, 0, -524258, 2, 0, -524257, 2, 0, -524256, 2, 0, -524255, 2, 0, -524254, 2, 0, -524253, 10, 0, -524241, 0, 0, -524235, 0, 0, -458738, 9, 0, -458737, 2, 0, -458736, 2, 0, -458735, 2, 0, -458734, 2, 0, -458733, 2, 0, -458732, 2, 0, -458731, 2, 0, -458730, 10, 0, -458705, 0, 0, -458699, 0, 0, -458694, 9, 0, -458693, 15, 0, -458692, 15, 0, -458691, 15, 0, -458690, 10, 0, -393169, 0, 0, -393163, 0, 0, -327633, 0, 0, -327627, 0, 0, -262097, 0, 0, -262091, 0, 0, -262090, 9, 0, -262089, 10, 0, -196561, 0, 0, -196555, 0, 0, -196548, 9, 0, -196547, 10, 0, -131025, 0, 0, -131019, 0, 0, -65489, 0, 0, -65483, 0, 0, 65535, 0, 0, 47, 0, 0, 53, 0, 0, 131071, 0, 0, 65583, 0, 0, 65589, 0, 0, 65591, 9, 0, 65592, 2, 0, 65593, 2, 0, 65594, 2, 0, 65595, 10, 0, 196607, 0, 0, 131077, 9, 0, 131078, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 10, 0, 131103, 5, 0, 131104, 2, 0, 131105, 2, 0, 131106, 2, 0, 131107, 2, 0, 131108, 2, 0, 131109, 3, 0, 131119, 0, 0, 131125, 0, 0, 262143, 0, 0, 196638, 5, 0, 196639, 11, 0, 196661, 0, 0, 327679, 0, 0, 262169, 9, 0, 262170, 2, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262174, 11, 0, 262197, 0, 0, 393215, 0, 0, 327733, 0, 0, 458751, 0, 0, 393235, 9, 0, 393236, 10, 0, 393269, 0, 0, 524287, 0, 0, 458790, 9, 0, 458791, 16, 0, 458792, 16, 0, 458793, 16, 0, 458794, 16, 0, 458795, 16, 0, 458796, 16, 0, 458797, 16, 0, 458798, 16, 0, 458799, 16, 0, 458800, 16, 0, 458801, 16, 0, 458802, 16, 0, 458803, 16, 0, 458804, 16, 0, 458805, 16, 0, 458806, 16, 0, 458807, 16, 0, 458808, 16, 0, 458809, 16, 0, 458810, 16, 0, 458811, 10, 0, 589823, 0, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 3, 0, 524319, 9, 0, 524320, 2, 0, 524321, 2, 0, 524322, 2, 0, 524323, 2, 0, 524324, 10, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589843, 9, 0, 589844, 2, 0, 589845, 2, 0, 589846, 2, 0, 589847, 2, 0, 589848, 2, 0, 589849, 2, 0, 589850, 2, 0, 589851, 10, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0 )

[node name="One-way Blocks" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
collision_layer = 8
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1376204, 2, 0, 131079, 2, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0 )

[node name="Ladder" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
collision_layer = 32
format = 1
tile_data = PoolIntArray( -1376204, 1, 0, -1310668, 0, 0, -1245132, 0, 0, -1179596, 0, 0, -1114060, 0, 0, -1048524, 0, 0, -982988, 0, 0, -917452, 0, 0, -851916, 0, 0, -786380, 0, 0, -720844, 0, 0, -655308, 0, 0, -589772, 0, 0, -524236, 0, 0, -458700, 0, 0, -393164, 0, 0, -327628, 0, 0, -262092, 0, 0, -196556, 0, 0, -131020, 0, 0, -65484, 0, 0, 52, 0, 0, 65588, 0, 0, 131079, 1, 0, 131124, 0, 0, 196615, 0, 0, 196660, 0, 0, 262151, 0, 0, 262196, 0, 0, 327687, 0, 0, 327732, 0, 0, 393223, 0, 0, 393268, 0, 0, 458759, 0, 0 )

[node name="ladder_checker" type="Area2D" parent="Ladder"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder/ladder_checker"]
position = Vector2( 3360, -448 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ladder/ladder_checker"]
position = Vector2( 480, 320 )
shape = SubResource( 9 )

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 640, 96 )

[node name="Coin8" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 2185, -1067 )

[node name="Coin13" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 1523, -887 )

[node name="Coin14" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 3018, -1064 )

[node name="Coin16" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 1920, -1196 )

[node name="Coin15" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 692, -934 )

[node name="Coin11" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 2245, -576 )

[node name="Coin12" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 948, -1199 )

[node name="Coin9" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 1252, -487 )

[node name="Coin10" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 162, -549 )

[node name="Coin5" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 2399, 84 )

[node name="Coin2" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 3906, -223 )

[node name="Coin7" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 3845, -1403 )

[node name="Coin6" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 2901, 348 )

[node name="Coin4" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 3132, -1389 )

[node name="Coin3" parent="Coins" instance=ExtResource( 6 )]
position = Vector2( 3849, -755 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 25, 210 )

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2( 1.2, 1.2 )
current = true
limit_left = 0
limit_top = -2375
limit_right = 4400
limit_bottom = 650
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_bottom = 0.1

[node name="Timer" type="Timer" parent="Player"]

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="HUD"]
margin_right = 302.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 56.0
texture = ExtResource( 5 )
expand = true

[node name="x" type="Label" parent="HUD"]
margin_left = 67.0
margin_top = 20.0
margin_right = 115.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 5 )
text = "X"

[node name="Coin" type="Label" parent="HUD"]
margin_left = 95.0
margin_top = 13.0
margin_right = 143.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 7 )
text = "15"

[node name="nohearts" type="TextureRect" parent="HUD"]
pause_mode = 2
margin_left = 139.0
margin_top = 11.0
margin_right = 298.0
margin_bottom = 56.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="hearts" type="TextureRect" parent="HUD"]
pause_mode = 2
margin_left = 139.0
margin_top = 11.0
margin_right = 298.0
margin_bottom = 56.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 2

[node name="Pause-Menu" parent="HUD" instance=ExtResource( 16 )]
visible = false

[node name="Portal" parent="." instance=ExtResource( 15 )]
position = Vector2( 3536, 382 )

[node name="Enemies" type="Node" parent="."]

[node name="Blue Enemy" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 736, 96 )
color = "ddfd00"

[node name="Blue Enemy11" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1932, -546 )

[node name="Blue Enemy14" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1932, -546 )
color = "ff0000"

[node name="Blue Enemy15" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1582, -1217 )
color = "ddfd00"

[node name="Blue Enemy17" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1289, -1217 )

[node name="Blue Enemy18" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1442, -1208 )
direction = 1
color = "ff0000"

[node name="Blue Enemy16" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1624, -860 )

[node name="Blue Enemy22" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2912, -1062 )
color = "fd00ff"

[node name="Blue Enemy21" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2509, -861 )

[node name="Blue Enemy19" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 819, -926 )
color = "ddfd00"

[node name="Blue Enemy20" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2631, -1250 )
color = "ddfd00"

[node name="Blue Enemy12" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1064, -482 )
color = "ddfd00"

[node name="Blue Enemy13" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 400, -552 )
color = "fd00ff"

[node name="Blue Enemy5" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2656, 350 )
color = "ff0000"

[node name="Blue Enemy6" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3119, 348 )
color = "ddfd00"

[node name="Blue Enemy23" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3693, 29 )

[node name="Blue Enemy7" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3651, -761 )
color = "fd00ff"

[node name="Blue Enemy10" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2194, 466 )

[node name="Blue Enemy8" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3604, -1388 )
color = "ff0000"

[node name="Blue Enemy9" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3278, -1386 )

[node name="Blue Enemy3" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 397, 90 )

[node name="Blue Enemy2" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 630, 425 )
color = "ff0000"

[node name="Blue Enemy4" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1586, 540 )
color = "fd00ff"

[node name="MobileControls" parent="." instance=ExtResource( 18 )]

[node name="Medpacks" type="Node" parent="."]

[node name="Med-Pack" parent="Medpacks" instance=ExtResource( 14 )]
position = Vector2( 3043, -739 )
collision_layer = 128

[node name="Med-Pack2" parent="Medpacks" instance=ExtResource( 14 )]
position = Vector2( 3749, 399 )
collision_layer = 128

[node name="Med-Pack4" parent="Medpacks" instance=ExtResource( 14 )]
position = Vector2( 3702, 399 )
collision_layer = 128

[node name="Med-Pack3" parent="Medpacks" instance=ExtResource( 14 )]
position = Vector2( 94, -550 )
collision_layer = 128

[node name="Game-Music" parent="." instance=ExtResource( 19 )]

[connection signal="body_shape_entered" from="Fallzone" to="Fallzone" method="_on_Area2D_body_shape_entered"]
[connection signal="body_entered" from="Ladder/ladder_checker" to="." method="_on_ladder_checker_body_entered"]
[connection signal="body_exited" from="Ladder/ladder_checker" to="." method="_on_ladder_checker_body_exited"]
[connection signal="coin_col" from="Coins/Coin" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin8" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin13" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin14" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin16" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin15" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin11" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin12" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin9" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin10" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin5" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin2" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin7" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin6" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin4" to="HUD" method="_on_Coin_coin_col"]
[connection signal="coin_col" from="Coins/Coin3" to="HUD" method="_on_Coin_coin_col"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="body_shape_entered" from="Portal" to="." method="_on_Portal_body_shape_entered"]
